# modern_durak_game_option

./: CMakeLists.txt  conanfile.py  conanfile.txt
modern_durak_game_option/: CMakeLists.txt  userDefinedGameOption.cxx  userDefinedGameOption.hxx
modern_game_game_option/: CMakeLists.txt  userDefinedGameOption.hxx
test/: CMakeLists.txt  main.cxx
